k8s/ingress/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guideplanner
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /   # redirigir trafico
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: "nginx"
  rules:
    - host: www.guideplanner.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
          - path: /get-recomendation
            pathType: Prefix
            backend:
              service:
                name: get-recomendation
                port:
                  number: 5001
          - path: /extract-places
            pathType: Prefix
            backend:
              service:
                name: extract-places
                port:
                  number: 5002
          - path: /summary-reviews
            pathType: Prefix
            backend:
              service:
                name: summary-reviews
                port:
                  number: 5003
          - path: /filter
            pathType: Prefix
            backend:
              service:
                name: filter
                port:
                  number: 5004
          - path: /get-plan
            pathType: Prefix
            backend:
              service:
                name: get-plan
                port:
                  number: 5005
  tls:
    - hosts:
        - www.guideplanner.pro
      secretName: ssl-cert-prod
